Criação da iamgem docker pelo github actions

--- a/HomeAssistantPoc/HomeAssistantPoc/HomeAssistantPoc.csproj
+++ b/HomeAssistantPoc/HomeAssistantPoc/HomeAssistantPoc.csproj
@@ -4,11 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>47dde740-8960-41ce-ae7c-1ff08fe2dbc7</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HomeAssistantPoc.Client\HomeAssistantPoc.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
   </ItemGroup>
 
 </Project>
