--- a/.github/workflows/docker-build-arm.yaml
+++ b/.github/workflows/docker-build-arm.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./HomeAssistantPoc/HomeAssistantPoc
         file: ./Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository }}/blazor-on-homeaassistant:latest
