--- a/.github/workflows/docker-build-arm.yaml
+++ b/.github/workflows/docker-build-arm.yaml
@@ -25,8 +25,8 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v2
       with:
-        context: ./HomeAssistantPoc/HomeAssistantPoc
-        file: ./Dockerfile
+        context: .
+        file: ./HomeAssistantPoc/HomeAssistantPoc/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository }}/blazor-on-homeaassistant:latest
         platforms: linux/arm64, linux/arm/v7
