--- a/.github/workflows/docker-build-arm.yaml
+++ b/.github/workflows/docker-build-arm.yaml
@@ -1,4 +1,4 @@
-name: Build and Publish Docker Image for ARM
+name: Build and Publish Docker Image for ARM64
 
 on:
   push:
@@ -12,6 +12,9 @@ jobs:
     - name: Check Out Repo
       uses: actions/checkout@v2
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+      
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -28,8 +31,8 @@ jobs:
         context: .
         file: ./HomeAssistantPoc/HomeAssistantPoc/Dockerfile
         push: true
-        tags: ghcr.io/${{ github.repository }}/blazor-on-homeaassistant:latest
-        platforms: linux/arm64, linux/arm/v7
+        tags: ghcr.io/${{ github.repository }}/blazor-on-homeassistant:latest
+        platforms: linux/arm64
 
 env:
-  IMAGE_NAME: blazor-on-homeaassistant
+  IMAGE_NAME: blazor-on-homeassistant
