--- a/HomeAssistantPoc/HomeAssistantPoc/Dockerfile
+++ b/HomeAssistantPoc/HomeAssistantPoc/Dockerfile
@@ -6,7 +6,8 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+#FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["HomeAssistantPoc/HomeAssistantPoc/HomeAssistantPoc.csproj", "HomeAssistantPoc/HomeAssistantPoc/"]
@@ -14,7 +15,7 @@ COPY ["HomeAssistantPoc/HomeAssistantPoc.Client/HomeAssistantPoc.Client.csproj",
 RUN dotnet restore "./HomeAssistantPoc/HomeAssistantPoc/./HomeAssistantPoc.csproj"
 COPY . .
 WORKDIR "/src/HomeAssistantPoc/HomeAssistantPoc"
-RUN dotnet build "./HomeAssistantPoc.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./HomeAssistantPoc.csproj" -c $BUILD_CONFIGURATION -o /app/build -r linux-x64
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
