--- a/.github/workflows/docker-build-arm.yaml
+++ b/.github/workflows/docker-build-arm.yaml
@@ -5,12 +5,21 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+
     steps:
     - name: Check Out Repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up QEMU
       #uses: docker/setup-qemu-action@v1
@@ -24,9 +33,16 @@ jobs:
       #uses: docker/login-action@v1
       uses: docker/login-action@v3
       with:
-        registry: ghcr.io
+        registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Extract metadata for Docker Buildx
+      id: meta
+      uses: docker/metadata-action@v3
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        #images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
     - name: Build and Push Docker Image
       #uses: docker/build-push-action@v2
@@ -35,8 +51,7 @@ jobs:
         context: .
         file: ./HomeAssistantPoc/HomeAssistantPoc/Dockerfile
         push: true
-        tags: ghcr.io/${{ github.repository }}/blazor-on-homeassistant:latest
+        #tags: ghcr.io/${{ github.repository }}/blazor-on-homeassistant:latest
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/arm64
-
-env:
-  IMAGE_NAME: blazor-on-homeassistant
