--- a/.github/workflows/docker-build-arm.yaml
+++ b/.github/workflows/docker-build-arm.yaml
@@ -22,15 +22,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up QEMU
-      #uses: docker/setup-qemu-action@v1
       uses: docker/setup-qemu-action@v3
       
     - name: Set up Docker Buildx
-      #uses: docker/setup-buildx-action@v1
       uses: docker/setup-buildx-action@v3
 
     - name: Login to GitHub Container Registry
-      #uses: docker/login-action@v1
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
@@ -42,16 +39,14 @@ jobs:
       uses: docker/metadata-action@v3
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        #images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        tags: type=raw,value=latest
 
     - name: Build and Push Docker Image
-      #uses: docker/build-push-action@v2
       uses: docker/build-push-action@v5
       with:
         context: .
         file: ./HomeAssistantPoc/HomeAssistantPoc/Dockerfile
         push: true
-        #tags: ghcr.io/${{ github.repository }}/blazor-on-homeassistant:latest
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/arm64
