--- a/HomeAssistantPoc/config.json
+++ b/HomeAssistantPoc/config.json
@@ -4,11 +4,23 @@
   "slug": "homelend-blazor-poc",
   "description": "AddOn web Blazor para teste no Home Assistant",
   "arch": [ "aarch64" ],
-  "options": {},
-  "schema": {},
+  "startup": "application",
+  "boot": "auto",
+  "host_network": false,
   "ports": {
     "8080/tcp": 8080,
     "8081/tcp": 8081
   },
-  "startup": "application"
+  "ports_description": {
+    "8080/tcp": "Blazor Web Server",
+    "8081/tcp": "Blazor Web Server (SSL)"
+  },
+  "panel_icon": "mdi:home-assistant",
+  "panel_title": "Homelend Blazor POC",
+  "hassio_api": true,
+  "webui": "http://[HOST]:[PORT:8080]",
+  "homeassistant_api": true,
+  "ingress": true,
+  "ingress_port": 8080,
+  "ingress_entry": "/"
 }
