--- a/HomeAssistantPoc/config.yaml
+++ b/HomeAssistantPoc/config.yaml
@@ -11,18 +11,18 @@ arch:
   # - i386
 map:
   - share: rw
-  - media: rw
-  - homeassistant_config: rw
-  - addon_config: rw
-  - ssl: rw
-  - backup: rw
-  - addons: rw
-  - all_addon_configs: rw
+  # - media: rw
+  # - homeassistant_config: rw
+  # - addon_config: rw
+  # - ssl: rw
+  # - backup: rw
+  # - addons: rw
+  # - all_addon_configs: rw
   
-hassio_api: true
-hassio_role: admin
-homeassistant_api: true
-docker_api: true
+# hassio_api: true
+# hassio_role: admin
+# homeassistant_api: true
+# docker_api: true
 
 host_network: true
 ingress: true
