--- a/.github/workflows/docker-build-arm.yaml
+++ b/.github/workflows/docker-build-arm.yaml
@@ -8,6 +8,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  APP_VERSION: "v1.0.1"
 
 jobs:
   build-and-push:
@@ -39,7 +40,7 @@ jobs:
       uses: docker/metadata-action@v3
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: type=raw,value=latest
+        tags: type=raw,value=${{ env.APP_VERSION }}
 
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
