Criando um novo projeto com nodeJS para testar as chamadas (HttpInfo)

--- a/.github/workflows/docker-build-dotnet-arm64.yaml
+++ b/.github/workflows/docker-build-dotnet-arm64.yaml
@@ -1,9 +1,11 @@
-name: Build and Publish Docker Image for ARM64
+name: HomeAssistantPoc - Build and Publish Docker Image for ARM64
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'HomeAssistantPoc/**'
 
 env:
   REGISTRY: ghcr.io
