--- a/HttpInfo/config.yaml
+++ b/HttpInfo/config.yaml
@@ -1,7 +1,7 @@
-name: "Homelend Blazor POC"
-slug: "homelend-blazor-poc"
-description: "AddOn web Blazor para teste no Home Assistant"
-version: "v1.0.5" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-dotnet-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
+name: "Alesil Http Info"
+slug: "alesil-http-info"
+description: "Devolve um json com todos os dados de request e também as variáveis de ambiente"
+version: "v1.0.0" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-httpinfo-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
 url: "https://github.com/aledevbr/homelend-homeassistant-poc"
 arch:
   # - armhf
@@ -26,19 +26,19 @@ docker_api: true
 
 panel_icon: mdi:home-assistant
 panel_admin: true
-panel_title: "Homelend Blazor POC"
+panel_title: "Http Info"
 
 #host_network: true
 host_network: false
 ingress: true
-ingress_port: 8080
+ingress_port: 8083
 ingress_entry: "/"
 
 ports:
-  8080/tcp: 8080
+  8080/tcp: 8083
   # 8081/tcp: 8081
 init: false
 startup: application
 boot: auto
-image: "ghcr.io/aledevbr/homelend-homeassistant-poc"
+image: "ghcr.io/aledevbr/homelend-homeassistant-poc-httpinfo"
 #webui: "http://[HOST]:[PORT:8080]"
