--- a/.github/workflows/docker-build-httpinfo-arm64.yaml
+++ b/.github/workflows/docker-build-httpinfo-arm64.yaml
@@ -47,8 +47,8 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
       with:
-        context: ./HttpInfo
-        file: ./Dockerfile
+        context: .
+        file: ./HttpInfo/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
