Acertando os paths e verificações para disparo da action do github

--- a/.github/workflows/docker-build-dotnet-arm64.yaml
+++ b/.github/workflows/docker-build-dotnet-arm64.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'HomeAssistantPoc/**'
+      - '/.github/workflows/docker-build-homeassistantpoc-arm64.yaml'
 
 env:
   REGISTRY: ghcr.io
