--- a/.github/workflows/docker-build-httpinfo-arm64.yaml
+++ b/.github/workflows/docker-build-httpinfo-arm64.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'HttpInfo/**'
+      - '/.github/workflows/docker-build-httpinfo-arm64.yaml'
 
 env:
   REGISTRY: ghcr.io
@@ -47,7 +48,7 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: ./HttpInfo
         file: ./HttpInfo/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
