retirando a barra na config do ingress, para tentar evitar as barras duplas

--- a/HomeAssistantPoc/config.yaml
+++ b/HomeAssistantPoc/config.yaml
@@ -1,7 +1,7 @@
 name: "Homelend Blazor POC"
 slug: "homelend-blazor-poc"
 description: "AddOn web Blazor para teste no Home Assistant"
-version: "v1.0.7" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-dotnet-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
+version: "v1.0.8" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-dotnet-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
 url: "https://github.com/aledevbr/homelend-homeassistant-poc"
 arch:
   # - armhf
@@ -32,7 +32,7 @@ panel_title: "Homelend Blazor POC"
 host_network: false
 ingress: true
 ingress_port: 8080
-ingress_entry: "/"
+ingress_entry: ""
 
 ports:
   8080/tcp: 8080
