--- a/HomeAssistantPoc/config.yaml
+++ b/HomeAssistantPoc/config.yaml
@@ -1,7 +1,7 @@
 name: "Homelend Blazor POC"
 slug: "homelend-blazor-poc"
 description: "AddOn web Blazor para teste no Home Assistant"
-version: "v1.0.13" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-dotnet-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
+version: "v1.0.14" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-dotnet-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
 url: "https://github.com/aledevbr/homelend-homeassistant-poc"
 arch:
   # - armhf
@@ -25,12 +25,14 @@ homeassistant_api: true
 docker_api: true
 
 panel_icon: mdi:home-assistant
-panel_admin: true
+panel_admin: false
 panel_title: "Homelend Blazor POC"
 
-#host_network: true
-host_network: false
-ingress: true
+host_network: true
+#host_network: false
+
+# ingress desativado por não conseguir fazer funcionar com o Blazor no iframe do Home Assistant
+ingress: false 
 ingress_port: 8080
 ingress_entry: ""
 
