--- a/RabbitMQ/Dockerfile
+++ b/RabbitMQ/Dockerfile
@@ -1,5 +1,5 @@
 # Imagem oficial do RabbitMQ com a interface de gerenciamento
-FROM rabbitmq:3-management
+FROM rabbitmq:3.12-management
 
 # Define a variável de ambiente para o RabbitMQ
 ENV RABBITMQ_DEFAULT_USER=admin
@@ -16,6 +16,10 @@ RUN mkdir -p /data/mnesia /data/log
 RUN mkdir -p /data/mnesia /data/log && \
     chown -R rabbitmq:rabbitmq /data
 
+# Copia arquivos de configuração personalizados
+#COPY rabbitmq.conf /etc/rabbitmq/rabbitmq.conf
+COPY configs/enabled_plugins /etc/rabbitmq/enabled_plugins
+
 # Não é necessário definir VOLUME para /var/lib/rabbitmq, pois estamos movendo a persistência para /data
 # Isso é gerenciado pelo Home Assistant
 #
@@ -23,7 +27,17 @@ RUN mkdir -p /data/mnesia /data/log && \
 #VOLUME ["/var/lib/rabbitmq"]
 
 # Exponha as portas padrão do RabbitMQ
-EXPOSE 5672 15672
+# 5672 é a porta de comunicação padrão
+# 1883 é a porta de comunicação MQTT
+# 8883 é a porta de comunicação MQTT com TLS
+# 15672 é a porta da interface de gerenciamento
+# 15674 é a porta de comunicação STOMP com TLS
+# 15675 é a porta de comunicação HTTP/WebSockets
+# 15692 é a porta de comunicação HTTP/WebSockets com TLS
+# 25672 é a porta de comunicação segura (cluster)
+# 61613 é a porta de comunicação STOMP
+
+EXPOSE 5672 15672 #1883
 
 # Comando para executar o servidor RabbitMQ
 # Você pode adicionar comandos para configurar usuários e permissões aqui se necessário
