Liberado todos os acessos do maps:

--- a/RabbitMQ/config.yaml
+++ b/RabbitMQ/config.yaml
@@ -1,7 +1,7 @@
 name: "Alesil RabbitMQ"
 slug: "alesil-rabbitmq"
 description: "Servidor RabbitMQ como Add-On do Home Assistant"
-version: "v1.0.3" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-rabbitmq-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
+version: "v1.0.4" #não esquecer de atualizar a versão no arquivo .github/workflows/docker-build-rabbitmq-arm64.yaml também (e dar commit) para que o Home Assistant atualize o addon automaticamente (se estiver instalado)
 url: "https://github.com/aledevbr/homelend-homeassistant-poc"
 arch:
   # - armhf
@@ -9,15 +9,15 @@ arch:
   - aarch64
   # - amd64
   # - i386
-#map:
-  # - share:rw
-  # - media:rw
-  # - homeassistant_config:rw
-  # - addon_config:rw
-  # - ssl:rw
-  # - backup:rw
-  # - addons:rw
-  # - all_addon_configs:rw
+map:
+  - share:rw
+  - media:rw
+  - homeassistant_config:rw
+  - addon_config:rw
+  - ssl:rw
+  - backup:rw
+  - addons:rw
+  - all_addon_configs:rw
   
 hassio_api: false
 hassio_role: default
